# tutor

./: .gitignore  CLAUDE.md  HANDOFF.md  OpenHymnal.abc
tablet_app/: settings.gradle
tablet_app/app/: build.gradle
tablet_app/app/src/main/: AndroidManifest.xml
tablet_app/app/src/main/assets/: drills.json  hymns.json  index.html
tablet_app/app/src/main/assets/drills/: 0.abc  1.abc  10.abc  11.abc  12.abc  13.abc  14.abc  15.abc  16.abc  17.abc  18.abc  19.abc  2.abc  20.abc  21.abc  22.abc  23.abc  24.abc  25.abc  26.abc  27.abc  28.abc  29.abc  3.abc  30.abc  31.abc  32.abc  33.abc  34.abc  35.abc  36.abc  37.abc  38.abc  39.abc  4.abc  40.abc  41.abc  42.abc  43.abc  44.abc  (+25 more)
tablet_app/app/src/main/assets/hymns/: 0.abc  1.abc  10.abc  100.abc  101.abc  102.abc  103.abc  104.abc  105.abc  106.abc  107.abc  108.abc  109.abc  11.abc  110.abc  111.abc  112.abc  113.abc  114.abc  115.abc  116.abc  117.abc  118.abc  119.abc  12.abc  120.abc  121.abc  122.abc  123.abc  124.abc  125.abc  126.abc  127.abc  128.abc  129.abc  13.abc  130.abc  131.abc  132.abc  133.abc  (+252 more)
tablet_app/app/src/main/cpp/: CMakeLists.txt  oboe_synth.cpp
tablet_app/app/src/main/java/com/tutor/musictutor/: MainActivity.java  MidiSynthService.java  OboeSynth.java  UsbMidiAttachActivity.java
tablet_app/app/src/main/res/values/: colors.xml  strings.xml
tablet_app/app/src/main/res/xml/: usb_midi_filter.xml
